crates/nx-syntax/tests/fixtures/valid/component-minimal.nx
component <Button text:string /> = {
  <button>{text}</button>
}
