crates/nx-syntax/tests/fixtures/invalid/mismatched_tags.nx
// Mismatched element tags
let <Button /> = <button>Click me</input>
